--- a/overview/types/change-events.mdx
+++ b/overview/types/change-events.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Change events
 ---
 {/* -- dri: Adam Locke -- */}
 
+import {CustomCard} from "/snippets/CustomCard.jsx";
 
 [Change events](/overview/concepts/change-events) provide an additional layer of
 meaning to your telemetry data. Use the following documentation to learn about how to
@@ -17,7 +18,7 @@ events within Changes Explorer, and as change events on dashboards, traces, and
 services, and query results for monitors.
 
  <Columns cols={1}>
-  <Card horizontal icon="paper-plane"
+  <CustomCard horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
@@ -32,7 +33,7 @@ identify changes that matter when you're trying to understand the root cause of 
 issue.
 
  <Columns cols={1}>
-  <Card horizontal icon="magnifying-glass-plus"
+  <CustomCard horizontal icon="magnifying-glass-plus"
     title="Filter data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
@@ -47,7 +48,7 @@ Platform to provide additional context that helps correlate events with system a
 service anomalies, allowing for quicker identification of incident cause.
 
  <Columns cols={1}>
-  <Card horizontal icon="display"
+  <CustomCard horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#ff9d1c"
     titleTextColor="#FFFFFF"
