--- a/overview/types.mdx
+++ b/overview/types.mdx
@@ -5,13 +5,14 @@ sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
+import {CustomCard} from "/snippets/CustomCard.jsx";
 
 To help you understand your network's health, and to troubleshoot issues that occur,
 Chronosphere Observability Platform includes tools and features to provide actionable
 insights into each type of telemetry data you ingest.
 
  <Columns cols={1}>
-  <Card
+  <CustomCard
   title="Metrics"
   titleBackgroundColor="#28a561"
   titleTextColor="#FFFFFF"
@@ -27,11 +28,9 @@ insights into each type of telemetry data you ingest.
   of periodic observations that record the count of requests handled over the span
   of a minute. Observability Platform adds, drops, and aggregates those statistics
   for use in dashboards, traces, and alerts.
-  </Card>
-</Columns>
+  </CustomCard>
 
- <Columns cols={1}>
-  <Card
+  <CustomCard
   title="Logs"
   titleBackgroundColor="#705DA0"
   titleTextColor="#FFFFFF"
@@ -47,11 +46,9 @@ insights into each type of telemetry data you ingest.
   Observability Platform to investigate issues with your systems and monitor their
   health. Use Logs Explorer to search log data so your teams have more detailed context
   to help identify and fix the root cause of issues.
-  </Card>
-</Columns>
+  </CustomCard>
 
- <Columns cols={1}>
-  <Card
+  <CustomCard
   title="Traces"
   titleBackgroundColor="#a63923"
   titleTextColor="#FFFFFF"
@@ -66,11 +63,9 @@ insights into each type of telemetry data you ingest.
   Mapping and analyzing requests as they flow through a distributed system. Traces
   include _spans_ that an app emits, and connects related spans together. Each span
   represents an operation or unit of work.
-  </Card>
-</Columns>
+  </CustomCard>
 
- <Columns cols={1}>
-  <Card
+  <CustomCard
   title="Change events"
   titleBackgroundColor="#ff9d1c"
   titleTextColor="#FFFFFF"
@@ -85,5 +80,5 @@ insights into each type of telemetry data you ingest.
   Data elements that describe real world changes or events that could have affected
   your environment. Events let you answer questions like _When did a particular
   service deploy last?_
-  </Card>
+  </CustomCard>
 </Columns>
