--- a/overview/types/metrics.mdx
+++ b/overview/types/metrics.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Metrics
 ---
 {/* -- dri: Adam Locke -- */}
 
+import {CustomCard} from "/snippets/CustomCard.jsx";
 
 A _time series_ is a set of data points with matching labels. A _metric_ is a time
 series with a common name, such as the `__name__` label. Use the following
@@ -25,7 +26,7 @@ with the Chronosphere Collector, and
 OpenTelemetry Collector.
 
  <Columns cols={1}>
-  <Card horizontal icon="paper-plane"
+  <CustomCard horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -42,7 +43,7 @@ interested in, and then apply functions to them. You can also learn about writin
 calculations within queries.
 
  <Columns cols={1}>
-  <Card horizontal icon="magnifying-glass-plus"
+  <CustomCard horizontal icon="magnifying-glass-plus"
     title="Query data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -59,7 +60,7 @@ specified in a monitor query, and receive notifications when the query matches
 specified logs.
 
  <Columns cols={1}>
-  <Card horizontal icon="display"
+  <CustomCard horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -73,7 +74,7 @@ Analyze both your metric data and queries to gain insights, understand the value
 your data semantics, and highlight changes and their impacts.
 
  <Columns cols={1}>
-  <Card horizontal icon="chart-bar"
+  <CustomCard horizontal icon="chart-bar"
     title="Analyze data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
@@ -88,7 +89,7 @@ your system over time. Identify and evaluate data, and then reshape the overall
 dataset to eliminate waste, unnecessary noise, and cost.
 
  <Columns cols={1}>
-  <Card horizontal icon="shapes"
+  <CustomCard horizontal icon="shapes"
     title="Control data"
     titleBackgroundColor="#28a561"
     titleTextColor="#FFFFFF"
