--- a/overview/types/traces.mdx
+++ b/overview/types/traces.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Traces
 ---
 {/* -- dri: Adam Locke -- */}
 
+import {CustomCard} from "/snippets/CustomCard.jsx";
 
 [Distributed tracing](/overview/concepts/distributed-tracing) is the process of
 mapping and analyzing requests as they flow through a distributed system. Use the
@@ -19,7 +20,7 @@ OpenTelemetry Collector is configuring [head sampling](/control/sampling/head-sa
 which is a powerful control mechanism for managing your tracing costs.
 
  <Columns cols={1}>
-  <Card horizontal icon="paper-plane"
+  <CustomCard horizontal icon="paper-plane"
     title="Ingest data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -35,7 +36,7 @@ help identify, triage, and understand the root cause of problems. See the
 capabilities that Trace Explorer provides.
 
  <Columns cols={1}>
-  <Card horizontal icon="magnifying-glass-plus"
+  <CustomCard horizontal icon="magnifying-glass-plus"
     title="Query data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -52,7 +53,7 @@ specified in a monitor query, and receive notifications when the query matches
 specified logs.
 
  <Columns cols={1}>
-  <Card horizontal icon="display"
+  <CustomCard horizontal icon="display"
     title="Observe data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -66,7 +67,7 @@ Create links to related data from other parts of Observability Platform, such as
 linking to logs from traces and linking to traces from dashboards.
 
  <Columns cols={1}>
-  <Card horizontal icon="link"
+  <CustomCard horizontal icon="link"
     title="Create links"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -82,7 +83,7 @@ semantics, and highlight changes and their impacts. Use
 to identify issues behind suspicious trends.
 
  <Columns cols={1}>
-  <Card horizontal icon="chart-bar"
+  <CustomCard horizontal icon="chart-bar"
     title="Analyze data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
@@ -98,7 +99,7 @@ data, and then sample the overall dataset to eliminate waste, unnecessary noise,
 cost.
 
  <Columns cols={1}>
-  <Card horizontal icon="shapes"
+  <CustomCard horizontal icon="shapes"
     title="Control data"
     titleBackgroundColor="#a63923"
     titleTextColor="#FFFFFF"
